--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
     "unit": "jest --config ./config/jest/jest.config.ts",
     "storybook": "storybook dev -p 6006 -c ./config/storybook",
-    "build-storybook": "storybook build -c ./config/storybook"
+    "build-storybook": "storybook build -c ./config/storybook",
+    "chromatic": "npx chromatic --project-token=chpt_131559d72d2e634"
   },
   "keywords": [],
   "author": "",
@@ -45,6 +46,7 @@
     "@typescript-eslint/parser": "^6.2.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-i18next-extract": "^0.8.3",
+    "chromatic": "^7.2.0",
     "css-loader": "^6.6.0",
     "eslint": "^8.10.0",
     "eslint-plugin-react": "^7.33.1",
@@ -76,5 +78,7 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.5",
     "react-router-dom": "^6.2.1"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "prod@1.0.0"
 }
