--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,3 +27,5 @@ jobs:
               run: npm run lint:scss
             - name: unit tests
               run: npm run unit
+            - name: screenshot tests
+              run: npm run chromatic
