--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,13 +1,28 @@
-name: 'Chromatic'
-on: push
+name: Chromatic Visual Testing
+
+on:
+    pull_request:
+        branches:
+            - main
+
 jobs:
-    chromatic-deployment:
+    chromatic:
         runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                node-version: [17.x]
+
         steps:
-            - uses: actions/checkout@v1
+            - name: Checkout code
+              uses: actions/checkout@v2
+
+            - name: Set up Node.js
+              uses: actions/setup-node@v2
+              with:
+                  node-version: ${{ matrix.node-version }}
+
             - name: Install dependencies
               run: npm install
-            - name: Publish to Chromatic
-              uses: chromaui/action@v1
-              with:
-                  projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+
+            - name: Run Chromatic
+              run: npx chromatic --projectToken ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
