--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,11 +19,19 @@ jobs:
                   node-version: ${{ matrix.node-version }}
             - name: install modules
               run: npm install
+
             - name: build project
               run: npm run build:prod
+              if: always()
+
             - name: linting typescript
               run: npm run lint:ts
+              if: always()
+
             - name: linting scss
               run: npm run lint:scss
+              if: always()
+
             - name: unit tests
               run: npm run unit
+              if: always()
