--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "css-loader": "^6.6.0",
     "eslint": "^8.10.0",
     "eslint-plugin-react": "^7.33.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.14",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
